# wtfport

./: README.md  pyproject.toml  requirements.txt  setup.py
wtfport/: __init__.py
wtfport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
