[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "psutil>=5.9.0",
    "typer>=0.7.0",
    "rich>=13.3.0",
    "pyperclip>=1.8.2",
    "plyer>=2.1.0",
    "colorama>=0.4.6",
    "wcwidth>=0.2.6",
    "requests>=2.28.2",
    "prompt_toolkit>=3.0.36"
]
build-backend = "setuptools.build_meta"

[project]
name = "wtfport"
version = "0.1.0" 
description = "A terminal tool to identify, inspect, and interact with processes bound to specific ports"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Hungwa Henry", email = "henterhungwa@gmail.com" }
]
keywords = ["port", "process", "network", "terminal", "development", "utilities", "devtools"]

dependencies = [
    "typer>=0.7.0",
    "rich>=13.3.0",
    "psutil>=5.9.0",
    "pyperclip>=1.8.2",
    "plyer>=2.1.0",
    "colorama>=0.4.6",
    "wcwidth>=0.2.6",
    "requests>=2.28.2",
    "prompt_toolkit>=3.0.36"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "tox>=4.5.1",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0"
]

[project.urls]
Homepage = "https://github.com/hungwahenry/wtfport"
Documentation = "https://github.com/hungwahenry/wtfport#readme"
Source = "https://github.com/hungwahenry/wtfport"
Tracker = "https://github.com/hungwahenry/wtfport/issues"

[project.scripts]
wtfport = "wtfport.cli:app"
